# algodex-service

./: .esdoc.json  .eslintrc.js  .gitignore  .gitmodules  .integration.test.env  .mainnet.docker.env  .mainnet.localhost.env  .mainnet.us-east-2.env  .releaserc.js  .testnet.docker.env  .testnet.localhost.env  .testnet.us-east-2.env  CONTRIBUTING.md  Dockerfile  README.md  comp1.txt  comp2.txt  constants.js  create_users.sh  docker-compose.docker.yml  docker-compose.local.yml  docker-compose.localhost.yml  docker-compose.production.yml  docker-compose.yml  docker.env  index.html  jest.config.js  jsconfig.json  local.env  package-lock.json  package.json  pnpm-lock.yaml  server.js  snowpack.config.js  tsconfig.json
api/: Cargo.toml  api_server.ts  asset.ts  couch-proxy.ts  log_remote.ts  orders.ts  proxy.ts  rewards.ts  trade_history.ts  util.ts  wallet.ts
api/src/: main.rs
rewards-calc/: .gitignore  Cargo.toml  calc_and_save_rewards.sh  copy_full_validation_data.sh  copy_partial_validation_data.sh  run_debug.sh  run_integration_test.sh
rewards-calc/integration_test/: .gitignore  epoch_2.json  epoch_2_validate.json  epoch_2_validate.txt
rewards-calc/result_data/: algx_balance_algx_balance_view_algx_balance2_queries.txt  algx_balance_algx_balance_view_algx_balance_queries.txt  algx_balance_algx_balance_view_algx_balance_queries.txt.copy  algx_balance_algx_balance_view_algx_balance_queries_copy.txt  blocks_blocks_view_blockToTime_queries.txt  formatted_escrow_formatted_escrow_view_epochs_queries.txt
rewards-calc/src/: calc_final_rewards.rs  epoch.rs  get_spreads.rs  (+12 more)
(+349 files in other folders)
