[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
dotenv = "0.15.0"
urlencoding = "2.1.0"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_path_to_error = "0.1.8"
duplicate = "0.4.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
lazy_static = "1.4.0"
